--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,14 @@
 server.port=80
 server.servlet.context-path=/love
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.level.httpclient.wire=ERROR
+
+#控制台打印sql
+mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
 #数据库连接配置
 #oracle
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -13,6 +21,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://106.15.94.235:3306/love?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=as153759
+
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/templates
 
 #数据库连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
